# 6-Wheel-2WD-Fuzzy-Robot

./: CMakeLists.txt  README  README.md  log copy.csv  log.csv  log.txt  project_context_20260603_v2.md  project_context_20260604_v3 (1).md  project_context_20260604_v3.md  run.csv  run2.csv  sdkconfig  sdkconfig.old  session_summary_20260603_phase3-4.md  spin.csv  spin2.csv
components/bsp/: CMakeLists.txt
components/bsp/include/: bsp_params.h  bsp_pins.h
components/control/: CMakeLists.txt
components/control/include/: controller_if.h  controller_pid.h  feedforward.h  pid.h
components/control/src/: controller_pid.c  pid.c
components/robot_app/: CMakeLists.txt
components/robot_app/include/: app_tasks.h  robot_fsm.h
components/robot_app/src/: app_internal.h  app_tasks.c  robot_fsm.c  task_comm.c  task_imu.c  task_imu_test.c  task_speed_ctrl.c  task_telemetry.c
components/robot_hal/: CMakeLists.txt  Kconfig.projbuild
components/robot_hal/include/: hal_encoder.h  hal_imu.h  hal_motor.h  hal_uart_link.h
components/robot_hal/src/: hal_encoder.c  hal_imu.cpp  hal_motor.c  hal_uart_link.c
components/services/: CMakeLists.txt
components/services/include/: odometry.h  protocol.h  robot_state.h  safety.h
components/services/src/: odometry.c  protocol.c  safety.c
main/: CMakeLists.txt  main.c
test_control/: test_pid.c
